# FIN580FinalProject

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: abalation_design.md  exploration.md  notes_to_self.md  outputs.md  status.md
notebooks/: run_phase_b.py  run_phase_bc.py  run_phase_d.py
plots/abalation/: abalation1_K10_baseline_vs_alpha50_selected_portfolios.csv  abalation1_LME_OP_Investment_baseline_vs_fuzzy_alpha_sweep.csv  abalation1_LME_OP_Investment_best_K_summary.csv  abalation1_LME_OP_Investment_dead_stocks_alpha50_K25.csv  abalation1_LME_OP_Investment_dead_stocks_alpha50_K25_summary.csv  abalation1_LME_OP_Investment_pruning_focused_K25.csv  abalation1_LME_OP_Investment_unique_alive_K25.csv  abalation1_alpha50_K10_selected_portfolios.csv  abalation1_alpha_steepness_summary.csv  observations.md
plots/table1/: table1_comparison.csv
slurm/: append_dt0005_focused.sbatch  append_dt_sweep_focused.sbatch  dead_stocks_diagnostic.sbatch  example.sbatch  fuzzy_alpha_sweep.sbatch  fuzzy_benchmark.sbatch  fuzzy_dead_pruned.sbatch  fuzzy_dt_sweep.sbatch  main.sbatch  main_fig6.sbatch  main_simplified.sbatch  main_table1.sbatch  run_main_tail.sbatch  unique_alive_diagnostic.sbatch
slurm/logs/: main-3117191.err  main-3117191.out  main-3117381.err  main-3117381.out  main_simplified-3116779.err  main_simplified-3116780.err  main_simplified-3116780.out  main_simplified-3116786.out  main_table1-3118270.err  main_table1-3118270.out  main_table1-3118276.err  (+6 more)
src/: data_prep.py  lasso.py  metrics.py  pruning.py  regressions.py  utils.py
(+1094 files in other folders)
